--- a/index,graded2.html
+++ b/index,graded2.html
@@ -6,16 +6,14 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-
-    <!-- Bootstrap CSS // Additional CSS must be placed after Bootstrap CSS -->
-     <!-- build:css css/main.css -->
+    <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css" />
+
+    <!-- Additional CSS must be placed after Bootstrap CSS -->
     <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css" />
     <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css" />
-    <link rel="stylesheet" href="css/styles.css" />
-    <!-- endbuild -->
-
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster|Open+Sans" />
+    <link rel="stylesheet" href="css/styles.css" />
 
     <title>NuCamp: A Better Way To Camp</title>
 </head>
@@ -33,7 +31,7 @@
                     <h2>a better way to camp</h2>
                 </div>
                 <div class="mt-4 col col-md-4 col-xl-2">
-                    <a role="button" class="btn btn-lg btn-info" id="reserveButton"> Reserve Campsite</a>
+                    <a role="button" class="btn btn-lg btn-info" data-toggle="modal" data-target="#reserveModal">Reserve Campsite</a>
                 </div>
             </div>
         </div>
@@ -42,13 +40,14 @@
     <div id="reserveModal" class="modal fade" role="dialog">
         <div class="modal-dialog modal-lg" role="document">
             <div class="modal-content">
-                <div class="modal-header">
+                <div class="modal-header bg-info text-white">
                     <h3 class="modal-title">Reserve a Campsite</h3>
                     <button type="button" class="close" data-dismiss="modal">&times;</button>
                 </div>
                 <div class="modal-body">
                     <div class="container-fluid">
-                        <form id="reserveForm">
+                        <form>
+                            <!-- form missing id attr -->
                             <div class="form-group row">
                                 <label for="numCampers" class="col-sm-6 col-form-label">Number of Campers</label>
 
@@ -74,15 +73,18 @@
 
                             <div class="form-group row">
                                 <label class="col-sm-6 col-form-label">Campsite Type</label>
-                                <div class="col-2 btn-group btn-group-toggle" >
-                                    <label class="btn btn-success active">
-                                        <input type="radio" name="siteType" id="siteTent" value="tent" autocomplete="off" checked />Tent
-                                    </label>
-                                    <label class="btn btn-primary">
-                                        <input type="radio" name="siteType" id="siteRV" value="RV" autocomplete="off" />RV
-                                    </label>
+                                <div class="col-2">
+                                    <!-- extra div above with col-2 - collides with div below class col 
+                                    outside one not needed since the column is -->
+                                    <div class="col btn-group btn-group-toggle" data-toggle="buttons">
+                                        <label class="btn btn-success active">
+                                            <input type="radio" name="siteType" id="siteTent" value="tent" autocomplete="off" checked />Tent
+                                        </label>
+                                        <label class="btn btn-primary">
+                                            <input type="radio" name="siteType" id="siteRV" value="RV" autocomplete="off" />RV
+                                        </label>
+                                    </div>
                                 </div>
-
                             </div>
 
                             <div class="form-group row">
@@ -113,48 +115,12 @@
                     <li class="nav-item"><a class="nav-link" href="contactus.html"><i class="fa fa-address-card fa-lg"></i> Contact</a></li>
                 </ul>
                 <span class="navbar-text ml-auto">
-                    <a role="button"  id="loginButton"><i class="fa fa-sign-in"></i> Login</a>
+                    <a role="button" data-toggle="modal" data-target="#loginModal"><i class="fa fa-sign-in"></i> Login</a>
                 </span>
             </div>
         </div>
     </nav>
 
-    <div id="loginModal" class="modal fade" role="dialog">
-        <div class="modal-dialog" role="document">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h3 class="modal-title">Login</h3>
-              <button type="button" class="close" data-dismiss="modal">&times;</button>
-            </div>
-            <div class="modal-body">
-              <div class="container-fluid">
-                <form>
-                  <div class="form-row">
-                    <div class="form-group col-12">
-                      <label class="sr-only" for="loginEmail">Email address</label>
-                      <input type="email" class="form-control form-control-sm" id="loginEmail" placeholder="Enter email">
-                    </div>
-                    <div class="form-group col-12">
-                      <label class="sr-only" for="loginPassword">Password</label>
-                      <input type="password" class="form-control form-control-sm" id="loginPassword" placeholder="Password">
-                    </div>
-                    <div class="col">
-                      <div class="form-check">
-                        <input class="form-check-input" type="checkbox">
-                        <label class="form-check-label"> Remember me</label>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="form-row">
-                    <button type="button" class="btn btn-secondary btn-sm ml-auto" data-dismiss="modal">Cancel</button>
-                    <button type="submit" class="btn btn-primary btn-sm ml-1">Sign in</button>
-                  </div>
-                </form>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
     <div class="container">
         <div class="row row-content">
             <div class="col-md-8 mx-auto">
@@ -179,7 +145,8 @@
                             <img class="d-block w-100" src="img/react-lake.jpg" alt="React Lake Campground" />
                             <div class="carousel-caption">
                                 <h3>React Lake Campground</h3>
-                                <p class="d-none d-sm-block">Nestled in the foothills of the Chrome Mountains, this campground on the shores of the pristine React Lake is a favorite for fly fishers.</p>
+                                <p class="d-none d-sm-block">Nestled in the foothills of the Chrome Mountains, this campground on the shores of the pristine React Lake is a favorite for fly fishers.
+                                </p>
                             </div>
                         </div>
 
@@ -202,9 +169,6 @@
                         <span class="sr-only">Next</span>
                     </a>
 
-                    <button class="btn btn-danger btn-sm" id="carouselButton">
-                        <i class="fa fa-pause"></i>
-                    </button>
                 </div>
             </div>
         </div>
@@ -235,7 +199,7 @@
                         <h3>React Lake Campground</h3>
                         <p class="d-none d-sm-block"> Nestled in the foothills of the Chrome Mountains, this campground on the shores of the pristine React Lake is a favorite for fly fishers.</p>
                     </div>
-                    <img class="d-flex ml-3 img-thumbnail" src="img/react-lake-thumb.jpg" alt="React Lake Campground" />
+                    <img class="d-flex ml-3 img-thumbnail" src="img/react-lake-thumb.jpg">
                 </div>
             </div>
         </div>
@@ -284,24 +248,22 @@
         </div>
     </footer>
 
-     <!-- jQuery must come first, then Popper.js, then the Bootstrap JavaScript plugins.-->
-    <!-- build:js js/main.js -->
+    <!-- jQuery must come first, then Popper.js, then the Bootstrap JavaScript plugins.-->
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script src="js/scripts.js"></script>
-    <!-- endbuild -->
 
-    
+
     <!-- end optional CDN links -->
     <script>
         CheckMyCode = {
             'key': 'dKS3sdf9Ab',
             'courseid': 'boot.nucamp',
-            'author': 'Todd Sparrow',
-            'assignment': 'week4'
+            'author': 'Sara Anderson',
+            'assignment': 'week3'
         }
     </script>
+    <script src="https://sparrowweb.net/cmc/instructor.js"></script>
     <script src="https://sparrowweb.net/cmc/checkmycode.js"></script>
 </body>
 
